--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reusable Responsive Navbar</title>
+  <title>Responsive Side Menu</title>
   <style>
     /* General Reset */
     * {
@@ -15,6 +15,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f9;
+      overflow-x: hidden;
     }
 
     /* Navbar Container */
@@ -24,103 +25,108 @@
       align-items: center;
       background-color: #2c3e50;
       color: #fff;
-      padding: 0.8rem 2rem;
+      padding: 1rem 2rem;
+      position: fixed;
+      width: 100%;
+      z-index: 1000;
+      top: 0;
     }
 
     .navbar .brand {
       font-size: 1.5rem;
       font-weight: bold;
-      cursor: pointer;
     }
 
-    /* Navbar Links */
-    .navbar .nav-links {
-      display: flex;
-      gap: 1.5rem;
-      transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    }
-
-    .navbar .nav-links a {
-      text-decoration: none;
-      color: #fff;
-      font-size: 1rem;
-      transition: color 0.3s;
-    }
-
-    .navbar .nav-links a:hover {
-      color: #1abc9c;
-    }
-
-    /* Dropdown Menu */
-    .dropdown {
-      position: relative;
-    }
-
-    .dropdown .dropdown-toggle {
-      cursor: pointer;
-    }
-
-    .dropdown .dropdown-menu {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      background-color: #34495e;
-      color: #fff;
-      min-width: 200px;
-      display: none;
-      flex-direction: column;
-      padding: 0.5rem 0;
-      border-radius: 5px;
-      z-index: 1000;
-    }
-
-    .dropdown .dropdown-menu a {
-      padding: 0.5rem 1rem;
-      text-decoration: none;
-      color: #fff;
-      transition: background-color 0.3s;
-    }
-
-    .dropdown .dropdown-menu a:hover {
-      background-color: #1abc9c;
-    }
-
-    /* Hamburger Menu for Mobile */
+    /* Hamburger Menu */
     .hamburger {
       display: none;
       cursor: pointer;
       flex-direction: column;
+      justify-content: center;
       gap: 0.3rem;
+      z-index: 1100;
     }
 
     .hamburger div {
       width: 25px;
       height: 3px;
       background-color: #fff;
+      transition: transform 0.3s ease, opacity 0.3s ease, background-color 0.3s ease;
+    }
+
+    /* Hamburger Transitions */
+    .hamburger.active div:nth-child(1) {
+      transform: rotate(45deg) translateY(8px);
+    }
+
+    .hamburger.active div:nth-child(2) {
+      opacity: 0;
+    }
+
+    .hamburger.active div:nth-child(3) {
+      transform: rotate(-45deg) translateY(-8px);
+    }
+
+    /* Side Menu */
+    .side-menu {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-direction: column;
+      padding-top: 5rem;
+      transition: left 0.3s ease;
+    }
+
+    .side-menu.active {
+      left: 0;
+    }
+
+    .side-menu a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 1.2rem;
+      padding: 1rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .side-menu a:hover {
+      background-color: #1abc9c;
+    }
+
+    /* Desktop View */
+    @media (min-width: 768px) {
+      .hamburger {
+        display: none;
+      }
+
+      .side-menu {
+        display: none;
+      }
+
+      .navbar .nav-links {
+        display: flex;
+        gap: 1.5rem;
+      }
+
+      .navbar .nav-links a {
+        text-decoration: none;
+        color: #fff;
+        font-size: 1rem;
+        transition: color 0.3s;
+      }
+
+      .navbar .nav-links a:hover {
+        color: #1abc9c;
+      }
     }
 
     /* Mobile View */
-    @media (max-width: 768px) {
-      .navbar .nav-links {
-        display: none;
-        flex-direction: column;
-        background-color: #2c3e50;
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 100%;
-        padding: 1rem 0;
-        z-index: 1000;
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-
-      .navbar .nav-links.active {
-        display: flex;
-        opacity: 1;
-        transform: translateY(0);
-      }
-
+    @media (max-width: 767px) {
       .hamburger {
         display: flex;
       }
@@ -130,19 +136,6 @@
 <body>
   <nav class="navbar">
     <div class="brand">MyBrand</div>
-    <div class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <div class="dropdown">
-        <span class="dropdown-toggle">Services</span>
-        <div class="dropdown-menu">
-          <a href="#">Web Development</a>
-          <a href="#">UI/UX Design</a>
-          <a href="#">SEO Optimization</a>
-        </div>
-      </div>
-      <a href="#">Contact</a>
-    </div>
     <div class="hamburger">
       <div></div>
       <div></div>
@@ -150,29 +143,21 @@
     </div>
   </nav>
 
+  <div class="side-menu">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </div>
+
   <script>
-    // Toggle Mobile Menu
     const hamburger = document.querySelector('.hamburger');
-    const navLinks = document.querySelector('.nav-links');
+    const sideMenu = document.querySelector('.side-menu');
 
+    // Toggle Side Menu
     hamburger.addEventListener('click', () => {
-      navLinks.classList.toggle('active');
-    });
-
-    // Dropdown Menu Functionality
-    const dropdownToggle = document.querySelector('.dropdown-toggle');
-    const dropdownMenu = document.querySelector('.dropdown-menu');
-
-    dropdownToggle.addEventListener('click', (e) => {
-      e.stopPropagation(); // Prevent closing the menu when clicking inside
-      dropdownMenu.style.display = dropdownMenu.style.display === 'flex' ? 'none' : 'flex';
-    });
-
-    // Close Dropdown Menu on Outside Click
-    document.addEventListener('click', (event) => {
-      if (!event.target.closest('.dropdown')) {
-        dropdownMenu.style.display = 'none';
-      }
+      hamburger.classList.toggle('active');
+      sideMenu.classList.toggle('active');
     });
   </script>
 </body>
