--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Navbar with Clickable Dropdown</title>
+  <title>Responsive Navbar with Inclined Dropdown</title>
   <style>
     /* General Reset */
     * {
@@ -144,10 +144,34 @@
       font-size: 1.2rem;
       padding: 1rem;
       transition: background-color 0.3s ease;
+      position: relative;
     }
 
-    .side-menu a:hover,
-    .side-menu .dropdown-toggle:hover {
+    .side-menu .dropdown-menu {
+      position: absolute;
+      top: 0;
+      left: -150px; /* Shift dropdown menu to the left */
+      background-color: #2c3e50;
+      border-radius: 5px;
+      display: none;
+      padding: 0.5rem 0;
+      z-index: 100;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .side-menu .dropdown.active .dropdown-menu {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .side-menu .dropdown-menu a {
+      text-decoration: none;
+      color: #fff;
+      padding: 0.5rem 1rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .side-menu .dropdown-menu a:hover {
       background-color: #1abc9c;
     }
 
@@ -159,15 +183,6 @@
 
       .nav-links {
         display: none;
-      }
-
-      .side-menu .dropdown-menu {
-        display: none;
-      }
-
-      .side-menu .dropdown-menu.active {
-        display: flex;
-        flex-direction: column;
       }
     }
   </style>
@@ -224,7 +239,8 @@
     dropdownToggles.forEach(toggle => {
       toggle.addEventListener('click', (e) => {
         e.preventDefault();
-        const dropdownMenu = toggle.nextElementSibling;
+        const dropdown = toggle.parentElement;
+        const dropdownMenu = dropdown.querySelector('.dropdown-menu');
         dropdownMenu.classList.toggle('active');
       });
     });
