--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Side Menu with Independent Dropdown</title>
+  <title>Responsive Side Menu with Dropdown</title>
   <style>
     /* General Reset */
     * {
@@ -102,22 +102,21 @@
 
     .dropdown {
       position: relative;
+      width: 100%;
     }
 
     .dropdown .dropdown-menu {
       display: none;
-      position: absolute;
-      top: 0;
-      left: 100%; /* Align to the right of "Services" */
+      flex-direction: column;
       background-color: #2c3e50;
       border-radius: 5px;
-      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-      z-index: 100;
+      margin-left: 1rem;
+      margin-top: 0.5rem;
+      padding: 0.5rem 0;
     }
 
     .dropdown .dropdown-menu.active {
       display: flex;
-      flex-direction: column;
     }
 
     .dropdown .dropdown-menu a {
