--- a/index.html
+++ b/index.html
@@ -1,186 +1,45 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Side Menu with Dropdown</title>
-  <style>
-    /* General Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simple Navbar</title>
 
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      overflow-x: hidden;
-    }
-
-    /* Navbar Container */
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: #2c3e50;
-      color: #fff;
-      padding: 1rem 2rem;
-      position: fixed;
-      width: 100%;
-      z-index: 1000;
-      top: 0;
-    }
-
-    .navbar .brand {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-
-    /* Hamburger Menu */
-    .hamburger {
-      display: none;
-      cursor: pointer;
-      flex-direction: column;
-      justify-content: center;
-      gap: 0.3rem;
-      z-index: 1100;
-    }
-
-    .hamburger div {
-      width: 25px;
-      height: 3px;
-      background-color: #fff;
-      transition: transform 0.3s ease, opacity 0.3s ease;
-    }
-
-    .hamburger.active div:nth-child(1) {
-      transform: rotate(45deg) translateY(8px);
-    }
-
-    .hamburger.active div:nth-child(2) {
-      opacity: 0;
-    }
-
-    .hamburger.active div:nth-child(3) {
-      transform: rotate(-45deg) translateY(-8px);
-    }
-
-    /* Side Menu (Mobile Mode) */
-    .side-menu {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-      display: flex;
-      flex-direction: column;
-      padding-top: 5rem;
-      transition: left 0.3s ease;
-    }
-
-    .side-menu.active {
-      left: 0;
-    }
-
-    .side-menu a,
-    .side-menu .dropdown-toggle {
-      text-decoration: none;
-      color: #fff;
-      font-size: 1.2rem;
-      padding: 1rem;
-      transition: background-color 0.3s ease;
-      position: relative;
-    }
-
-    .side-menu a:hover,
-    .side-menu .dropdown-toggle:hover {
-      background-color: #1abc9c;
-    }
-
-    .dropdown {
-      position: relative;
-      width: 100%;
-    }
-
-    .dropdown .dropdown-menu {
-      display: none;
-      flex-direction: column;
-      background-color: #2c3e50;
-      border-radius: 5px;
-      margin-left: 1rem;
-      margin-top: 0.5rem;
-      padding: 0.5rem 0;
-    }
-
-    .dropdown .dropdown-menu.active {
-      display: flex;
-    }
-
-    .dropdown .dropdown-menu a {
-      text-decoration: none;
-      color: #fff;
-      padding: 0.5rem 1rem;
-      transition: background-color 0.3s ease;
-    }
-
-    .dropdown .dropdown-menu a:hover {
-      background-color: #1abc9c;
-    }
-
-    /* Responsive Adjustments */
-    @media (max-width: 768px) {
-      .hamburger {
-        display: flex;
-      }
-    }
-  </style>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar">
-    <div class="brand">MyBrand</div>
-    <div class="hamburger">
-      <div></div>
-      <div></div>
-      <div></div>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">MyLogo</a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
-  <div class="side-menu">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <div class="dropdown">
-      <span class="dropdown-toggle">Services</span>
-      <div class="dropdown-menu">
-        <a href="#">Web Development</a>
-        <a href="#">UI/UX Design</a>
-        <a href="#">SEO Optimization</a>
-      </div>
-    </div>
-    <a href="#">Contact</a>
-  </div>
-
-  <script>
-    const hamburger = document.querySelector('.hamburger');
-    const sideMenu = document.querySelector('.side-menu');
-    const dropdownToggles = document.querySelectorAll('.dropdown-toggle');
-
-    // Toggle Side Menu
-    hamburger.addEventListener('click', () => {
-      hamburger.classList.toggle('active');
-      sideMenu.classList.toggle('active');
-    });
-
-    // Toggle Dropdown Menus
-    dropdownToggles.forEach(toggle => {
-      toggle.addEventListener('click', (e) => {
-        e.preventDefault();
-        const dropdownMenu = toggle.nextElementSibling;
-        dropdownMenu.classList.toggle('active');
-      });
-    });
-  </script>
+  <!-- Bootstrap 5 JS (for toggling) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
